Solve overfilling display problem Display cleans when length reaches 18 characters If the number is too big -> scientific notation with just 4 decimals

--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ body{
     align-items: flex-end;
     justify-content: flex-end;
     font-size: 1.2em;
-    font-weight: bold;
 }
 .container{
     height: 200px;
